<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PixelTunes</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="settings">Settings</string>
    <string name="no_songs">No songs found</string>
    <string name="loading">Loading music library…</string>
    <string name="permission_required">Storage permission required to play music</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="playlist">Playlist</string>
    <string name="now_playing">Now Playing</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="system_default">System Default</string>
    <string name="theme">Theme</string>
    <string name="about">About</string>
    <string name="version">Version 1.0</string>
    <string name="retro_music_player">Retro 8-bit Music Player</string>
    <string name="made_by">Made by Navaneeth Sankar K P</string>
    <string name="github_repository">GitHub Repository</string>
    <string name="linkedin_url">https://www.linkedin.com/in/navaneeth-sankar-k-p</string>
    <string name="github_url">https://github.com/navuxneeth/PixelTunes</string>
    <string name="sort">Sort</string>
    <string name="sort_title">A-Z</string>
    <string name="sort_date">Date</string>
    <string name="sort_size">Size</string>
    <string name="browse_folders">Browse Folders</string>
    <string name="style_mode">Style Mode</string>
    <string name="vinyl_player">Vinyl Player</string>
    <string name="normal_player">Normal Player</string>
    <string name="needle_arm">Needle Arm</string>
</resources>
